# xeno-lib

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  FFMPEG_COMPARISON.md  IMPLEMENTATION_STATUS.md  NOTICE  OPERATION_VERIFICATION.md  PHASE1_DESIGN.md  PHASE2_VIDEO_DESIGN.md  README.md  REALITY.md  RELEASE.md  SECURITY.md  clippy.toml  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/scripts/: cla_assistant.py
.github/workflows/: audit.yml  ci.yml  cla.yml  release.yml  stale.yml
benches/: transforms.rs
benchmarks/competitors/: README.md  baseline.json
benchmarks/ffmpeg/: OVERCOME_TRACKER.md  README.md  baseline.json  parity_spec.json
docs/: AI_MIGRATION.md  FFMPEG_COMPARISON.md  LICENSE_POLICY.md  README.md  REALITY.md
examples/: check_simd.rs  create_test_image.rs  generate_goldens.rs  generate_test_audio.rs  practical_usage.rs  remove_background.rs  test_all_operations.rs
models/: manifest.json
scripts/: bench.sh  build-wasm.sh
src/: agent.rs  error.rs  lib.rs  model_utils.rs  text.rs
src/adjustments/: color.rs  mod.rs  tests.rs
src/ai_staging/: background_removal.rs  colorize.rs  face_restore.rs  inpaint.rs  mod.rs  upscale.rs
src/analysis/: comparison.rs  exif.rs  mod.rs  statistics.rs  tests.rs
src/audio/: decode.rs  effects.rs  error.rs  filters.rs  metadata.rs  mod.rs  visualization.rs
src/audio/encode/: aac.rs  mod.rs  opus.rs
src/audio_separate/: config.rs  mod.rs  model.rs  processor.rs
src/background/: mod.rs  model.rs  postprocess.rs  preprocess.rs
src/batch_inference/: mod.rs
src/colorize/: config.rs  mod.rs  model.rs  processor.rs
src/composite/: mod.rs
src/depth/: config.rs  mod.rs  model.rs  processor.rs
src/document/: mod.rs
src/face_analysis/: config.rs  mod.rs  model.rs  processor.rs
src/face_detect/: config.rs  mod.rs  model.rs  processor.rs
src/face_restore/: config.rs  mod.rs  model.rs  processor.rs
src/filters/: mod.rs  tests.rs
src/formats/: avif.rs  heif.rs  mod.rs  webp.rs
src/frame_interpolate/: config.rs  mod.rs  model.rs  processor.rs
src/gpu_memory/: mod.rs
src/hardware/: detect.rs  mod.rs
src/inpaint/: config.rs  mod.rs  model.rs  processor.rs
src/latex/: mod.rs
src/music_gen/: config.rs  mod.rs  model.rs  processor.rs
src/noise_reduce/: mod.rs
src/ocr/: config.rs  mod.rs  model.rs  processor.rs
src/pose/: config.rs  mod.rs  model.rs  processor.rs
src/qrcode/: mod.rs
src/quality/: mod.rs
src/quantize/: mod.rs
src/style_transfer/: config.rs  mod.rs  model.rs  processor.rs
src/subtitle/: mod.rs  parser.rs  render.rs
src/text_to_3d/: config.rs  mod.rs  model.rs  processor.rs
src/transcribe/: config.rs  mod.rs  model.rs  processor.rs
src/transforms/: affine.rs  alignment.rs  batch.rs  canvas.rs  config.rs  crop.rs  flip.rs  flip_simd.rs  interpolation.rs  matrix.rs  mod.rs  perspective.rs  resize.rs  rotate.rs  sequence.rs  tests.rs  utils.rs
src/upscale/: config.rs  mod.rs  model.rs  processor.rs
src/vectorize/: mod.rs
src/video/: edit.rs  error.rs  frame.rs  metadata.rs  mod.rs  mux.rs
src/video/container/: avi_demux.rs  ivf_demux.rs  mkv_demux.rs  mod.rs  mp4_demux.rs
src/video/decode/: dav1d_decoder.rs  hevc.rs  mod.rs  nvdec.rs  openh264_decoder.rs  vp9.rs
src/video/encode/: av1.rs  h264.rs  mod.rs  nvenc.rs
src/video_gen/: config.rs  mod.rs  model.rs  processor.rs
src/voice_clone/: config.rs  mod.rs  model.rs  processor.rs
tests/: format_coverage.rs  golden.rs  memory_usage.rs
tools/: generate_social_preview.ps1
tools/competitive-bench/: Cargo.toml
tools/competitive-bench/src/: main.rs
tools/ffmpeg-parity/: generate_matrix.py
xeno-edit/: CLI_COMMANDS.md  Cargo.toml
xeno-edit/src/: main.rs
xeno-lib-napi/: Cargo.toml  build.sh  index.d.ts  index.js  model-manager.d.ts  model-manager.js  package.json
xeno-lib-napi/src/: ai_models.rs  audio_processing.rs  hardware.rs  helpers.rs  image_encoding.rs  image_processing.rs  latex.rs  lib.rs  validation.rs  video.rs
xeno-lib-wasm/: Cargo.toml
xeno-lib-wasm/src/: lib.rs
